--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,5 @@
-language : php
+language: java
+jdk: oraclejdk8
 
-php:
-  -5.5
-  -5.6
-  -7.0
-
-before-script:
-
-  - composer install --no-interaction
-
-
-script:
-  - vendor/bin/phpunit
+after_deploy:
+  - echo "done deploying"
