--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,8 @@
 language: java
 jdk:
- - oraclejdk8
-env:
- - NODE_VERSION=6
-install:
- - nvm install $NODE_VERSION
- - nvm use $NODE_VERSION
- - sudo apt-get install -y curl
- - curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -
- - sudo apt-get install -y nodejs
- - sudo npm install -g yarn
-script:
- - ./setup.sh
-branches:
-only:
- - /.*/
+ - openjdk8
+
+script: ./mvn clean install
+
+notifications:
+  email: elhanianas@gmail.com
