--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
-language: java
-jdk:
- - openjdk8
+language: php
 
-script: ./mvn clean install
+php:
+  - 5.5
+  - 7.7
+  - 7.0
 
-notifications:
-  email: elhanianas@gmail.com
+
+before_script:
+  - composer install --no-interaction
+
+
+script:
+
+  - vendor/bin/phpunit
