--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
-language: php
+language: java
+jdk: oraclejdk8
 
-php:
-  - 5.5
-  - 7.7
-  - 7.0
+install: true
+script: mvn install
 
-
-before_script:
-  - composer install --no-interaction
-
-
-script:
-
-  - vendor/bin/phpunit
+after_deploy:
+  - echo "done deploying"
